--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   "@context": "https://schema.org/",
   "@type": "Person",
   "name": "Hadariel Heilige",
-  "url": "https://hadariel.space/",
-  "image": "https://hadariel.space/tshirt_back2.png",
+  "url": "https://hadariel.pp.ua/",
+  "image": "https://hadariel.pp.ua/tshirt_back2.png",
   "sameAs": [
     "https://www.youtube.com/channel/UCQDqxiDlM2Vcrt38jTRQI7g",
     "https://www.linkedin.com/in/hadariel/",
     "https://github.com/TechDedSec228/",
-    "https://hadariel.space/",
+    "https://hadariel.pp.ua/",
     "https://www.instagram.com/hadariel/"
   ],
   "jobTitle": "SEO-specialist, pentester, netstalker, sometimes coder...",
@@ -60,14 +60,14 @@
 <!-- OpenGraph start --> 
 <meta property="og:title" content="Hadariel Heilige">
 <meta property="og:site_name" content="Home">
-<meta property="og:url" content="https://hadariel.space/">
+<meta property="og:url" content="https://hadariel.pp.ua/">
 <meta property="og:description" content="SEO-specialist, pentester, netstalker, sometimes coder...">
 <meta property="og:type" content="profile">
-<meta property="og:image" content="https://hadariel.space/tshirt_back2.png">
-<meta property="og:image" content="https://hadariel.space/tshirt.png">
+<meta property="og:image" content="https://hadariel.pp.ua/tshirt_back2.png">
+<meta property="og:image" content="https://hadariel.pp.ua/tshirt.png">
 <!-- OpenGraph end -->
   
- <link rel="canonical" href="http://hadariel.space/"/>
+ <link rel="canonical" href="http://hadariel.pp.ua/"/>
 
 <meta name="mailru-domain" content="ziEcCnL87fkGXcQI" />
 <meta name="yandex-verification" content="1a39f912434899cb" />
@@ -85,7 +85,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Hᴀᴅᴀʀɪᴇʟ Hᴇɪʟɪɢᴇ</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">SEO-specialist, pentester, netstalker, sometimes coder...</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/mailer.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Mailer<br></a> <a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/review.html"><span class="mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>Review Generator<br></a> <a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/webcam-pacman/">Pacman with<br>AI management</a><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/character-counter/">Character<br>counter</a><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/acunetix"><img src="https://3962eb62.ngrok.io/images/favicon.ico" style="margin-right: 13px;" width="30"> Acunetix<br>scanner</a><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/ethical-hacking/"><img src="https://hadariel.space/ethical-hacking/photos/photo_1@18-06-2019_10-09-24.jpg" style="margin-right: 13px;" width="30"> @api_00</a><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/aboutme/"><img src="https://hadariel.space/white_hat.png" style="margin-right: 10px;" width="33">About</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="/mailer.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Mailer<br></a> <a class="btn btn-md btn-white-outline display-4" href="/review.html"><span class="mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>Review Generator<br></a> <a class="btn btn-md btn-white-outline display-4" href="/webcam-pacman/">Pacman with<br>AI management</a><a class="btn btn-md btn-white-outline display-4" href="/character-counter/">Character<br>counter</a><a class="btn btn-md btn-white-outline display-4" href="/acunetix"><img src="https://3962eb62.ngrok.io/images/favicon.ico" style="margin-right: 13px;" width="30"> Acunetix<br>scanner</a><a class="btn btn-md btn-white-outline display-4" href="/ethical-hacking/"><img src="/ethical-hacking/photos/photo_1@18-06-2019_10-09-24.jpg" style="margin-right: 13px;" width="30"> @api_00</a><a class="btn btn-md btn-white-outline display-4" href="/aboutme/"><img src="/white_hat.png" style="margin-right: 10px;" width="33">About</a></div>
             </div>
         </div>
     </div>
