--- a/acunetix/index.html
+++ b/acunetix/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <!-- redirect --><meta http-equiv="refresh" content="0;URL=https://652af6f1.ngrok.io" />
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/png" href="/favicon.ico">
 <title>Acunetix</title>
@@ -7,6 +8,6 @@
 <meta name="viewport" content="initial-scale=1">
 </head>
 <body>
-<iframe src=https://776ee591.ngrok.io/ width="100%" height="100%" frameborder="0"/>
+<iframe src=https://652af6f1.ngrok.io/ width="100%" height="100%" frameborder="0"/>
 </body>
 </html>
