--- a/osint/index.html
+++ b/osint/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="body">
       <div id="header">
-        OSINT Framework (Unofficial)
+        OSINT Framework<br>(Unofficial Mirror)
           <hr/>
       </div>
     </div>
