--- a/ethical-hacking/index.html
+++ b/ethical-hacking/index.html
@@ -148,7 +148,7 @@ Ethical hacking instruction notes
        </div>
 
        <div class="text">
-Интересный XSS<br><br>Введите, где, к примеру, ?id=123 отражено в теле JSON внутри тега скрипта.  Если вы отправите ?id=&lt;/ script&gt;,приложение очистит ввод.<br><br> Это можно обойти с помощью ?id[&quot;&lt;/script&gt;&quot;]=123
+Интересный <a href="https://www.academia.edu/43353623/KitApp_Mobile_Development_Studio_Ionic4_NavController_VS_Angular_Router">XSS</a><br><br>Введите, где, к примеру, ?id=123 отражено в теле JSON внутри тега скрипта.  Если вы отправите ?id=&lt;/ script&gt;,приложение очистит ввод.<br><br> Это можно обойти с помощью ?id[&quot;&lt;/script&gt;&quot;]=123
        </div>
 
        <div class="signature details">
