--- a/ethical-hacking/index.html
+++ b/ethical-hacking/index.html
@@ -5576,7 +5576,7 @@ Ethical hacking instruction notes [2]
        </div>
 
        <div class="text">
-<a href="" onclick="return ShowHashtag(&quot;article&quot;)">#article</a> <br><br>FAQ по часто задаваемым<br><br><a href="https://telegra.ph/FAQ-09-26-2">https://telegra.ph/FAQ-09-26-2</a><br><br>Также <a href="" onclick="return ShowHashtag(&quot;backup&quot;)">#backup</a> канала в веб версии:<br><br><a href="https://hadariel.space/ethical-hacking/">https://hadariel.space/ethical-hacking/</a>
+<a href="" onclick="return ShowHashtag(&quot;article&quot;)">#article</a> <br><br>FAQ по часто задаваемым<br><br><a href="https://telegra.ph/FAQ-09-26-2">https://telegra.ph/FAQ-09-26-2</a><br><br>Также <a href="" onclick="return ShowHashtag(&quot;backup&quot;)">#backup</a> канала в веб версии:<br><br><a href="https://hadariel.pp.ua/ethical-hacking/">https://hadariel.pp.ua/ethical-hacking/</a>
        </div>
 
        <div class="signature details">
