--- a/<script>alert(1)</script>.html
+++ b/<script>alert(1)</script>.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137058257-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137058257-1');
+</script>
 <title>SEO Test Title-tag</title>
 <meta name="title" content="Set.constructor`alert\x28document.domain\x29```" />
 <meta name="description" content='"><img src=x onerror=prompt(document.domain)>' />
