--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 													</div>
 																		<div class="feature-list">
 							<div >
-								<ul><li>Security audit <strong>PRO</strong></li><li>Vulnerability report <strong>PRO</strong></li><li>Tips for fixing <strong>PRO</strong></li><li>Manual and automated work</li></ul>							</div>
+								<ul><li>Security audit</li><li>Vulnerability report</li><li>Tips for fixing</li><li>Manual and automated work</li></ul>							</div>
 						</div>
 																		<div class="lnks">
 							<a href="/#contacts-e" class="lnk">
